--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -59,7 +59,7 @@
   <tr>
     <td colspan="5" class="td1">
       <div class="div1">
-        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/LANTO.png"
+        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/${models.OperatorConfig.getVal("companyphoto")}"
              style="height:100%">
       </div>
     </td>
@@ -127,10 +127,10 @@
   <tr>
     <td colspan="5">
       <div class="div2">
-        <p>${models.OperatorConfig.getVal("companyname")} Electronic Commerce Co., Ltd</p>
+        <p>${models.OperatorConfig.getVal("companyname")}</p>
 
         <p>SIGNATURE</p>
-        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/signature.png">
+        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/${models.OperatorConfig.getVal("signature")}">
       </div>
     </td>
   </tr>
