--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -115,7 +115,8 @@
 
 <script type="text/template" id="sidlabel-template">
   <div>
-    <a href="/sellings/<%= pam.id %>/procureunit/new/" target="_blank" class="btn btn-mini btn-info">
+    <a href="/sellings/<%= pam.id %>/procureunit/new/<%= totalFive %>/<%= day %>" target="_blank"
+       class="btn btn-mini btn-info">
       <i class="icon-random"></i> 采购计划</a>
     <a href="@{Sellings.selling()}/<%= pam.id %>" target="_blank" class="btn btn-mini btn-success">Selling
       页面</a>
