--- a/core/app/views/ProcureUnits/blank.html
+++ b/core/app/views/ProcureUnits/blank.html
@@ -18,8 +18,13 @@
   </tr>
   <tr>
     <td colspan="4">
-      <button class="btn btn-primary">创建</button>
+      <button class="btn btn-primary" id="create_unit">创建</button>
     </td>
   </tr>
 </table>
 #{/form}
+
+<input type="text" id="totalFive" value="${totalFive}">
+<input type="text" id="day" value="${day}">
+
+
