--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -61,7 +61,7 @@
   </thead>
   <tbody>
   #{list items:dtos, as:'dto'}
-  <tr>
+  <tr totalFive="${dto.working + dto.worked + dto.way + dto.inbound + dto.qty}" day="${dto.day30}">
     <td class="sid"><i class="icon-bolt"></i> ${dto.fid}</td>
     <td><a href="${dto.asinLink()}" target="_blank"><i class="icon-external-link"></i> ${dto.asin}</a></td>
     <td style="color:#A5B600" data-dtofid='<%= dto.fid %>'>${dto.plan}</td>
@@ -101,7 +101,7 @@
       #{turnOver turnOver:dto.sidTurnOverT4._2/}
       #{turnOver turnOver:dto.sidTurnOverT4._3/}
       #{turnOver turnOver:dto.sidTurnOverT4._4/}
-    <td>${dto.outday}</td>
+    <td style="background:${dto.step}">${dto.outday}</td>
     <td>${dto.displayPrice}</td>
     <td>
       <select name="sellingCycle" size="1" data-sellingid="${dto.fid}" style="width: 85px;">
