--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -7,7 +7,7 @@
                 <span style="font-size: 14pt;">${models.OperatorConfig.getVal("brandname")}</span>
              </div>
       <span style="font-weight: bold; font-size: 12pt">${models.OperatorConfig.getVal("shipmentdetaillabel")}</span><br>
-      ONLY FOR ${models.OperatorConfig.getVal("brandname")} TECHNOLOGY CO.,LIMITED PACKING LIST
+      ONLY FOR ${models.OperatorConfig.getVal("companyname")} PACKING LIST
     </td>
   </tr>
 
