--- a/core/app/views/ProcureUnits/blank.html
+++ b/core/app/views/ProcureUnits/blank.html
@@ -22,9 +22,12 @@
     </td>
   </tr>
 </table>
+<input type="hidden" id="isNeedApply" name="isNeedApply" value="${isNeedApply}">
+<input type="hidden" id="totalFive" name="totalFive" value="${totalFive}">
+<input type="hidden" id="day" name="day" value="${day}">
+
 #{/form}
 
-<input type="text" id="totalFive" value="${totalFive}">
-<input type="text" id="day" value="${day}">
+
 
 
