--- a/core/app/views/Elcuk/edit.html
+++ b/core/app/views/Elcuk/edit.html
@@ -14,6 +14,10 @@
       <td>${config.type}</td>
     </tr>
     <tr>
+      <td>参数编码</td>
+      <td>${config.paramcode}</td>
+    </tr>
+    <tr>
       <td>参数名称</td>
       <td>${config.name}</td>
     </tr>
