--- a/core/app/views/ShipmentReports/lossRateReport.html
+++ b/core/app/views/ShipmentReports/lossRateReport.html
@@ -76,7 +76,10 @@
             <td>${itm.unit.sid}</td>
             <td>${itm.unit.fba?.shipmentId}</td>
             <td>${itm.unit.fba?.centerId}</td>
-            <td>${itm.qty} (${itm.unit.attrs.planQty} | ${itm.unit.attrs.qty})</td>
+            <td>
+            ${itm.qty - itm.unit.returnPurchaseSample() - itm.unit.fetchCheckTaskQcSample()}
+              (${itm.unit.attrs.planQty} | ${itm.unit.attrs.qty})
+            </td>
             <td>${itm.recivedQty}</td>
             <td>${itm.adjustQty}</td>
             <td>${itm.showDeliverymentId()}</td>
