--- a/core/app/views/Orders/_order_table_tr.html
+++ b/core/app/views/Orders/_order_table_tr.html
@@ -6,6 +6,7 @@
     <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数">
         <i class="icon-question-sign"></i> OrderId
     </th>
+    <th>UserId</th>
     <th>Buyer</th>
     <th>Phone</th>
     <th>Email</th>
@@ -36,6 +37,7 @@
         ${ord.orderId} (${ord.itemCount()} | ${ord.fees.size()})
         </a>
     </td>
+    <td>${ord.userid}</td>
     <td>${ord.buyer}</td>
     <td>${ord.phone}</td>
     <td>
