--- a/core/app/views/Activitis/index.html
+++ b/core/app/views/Activitis/index.html
@@ -4,6 +4,9 @@
     #{script_cdn name: 'activitis/index.coffee'/}
 #{/set}
 
+#{errorMsgs /}
+#{flash_alert/}
+
 <ul class="nav nav-tabs" id="below_tab">
   <li class="active">
     <a href="#activeprocess" data-toggle='tab'>待处理流程</a>
