--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -80,10 +80,18 @@
         <td rowspan="2">Transport By ${firstUnit.shipType.name()}</td>
       #{/if}
       #{else}
-        <td rowspan="2">
-          Transport By ${firstUnit.shipType.name()}<br>
-          DDU Terms
-        </td>
+          #{if country != 'US'}
+            <td rowspan="2">
+              Transport By ${firstUnit.shipType.name()}<br>
+              DDU Terms
+            </td>
+          #{/if}
+          #{else }
+            <td rowspan="2">
+              Transport By ${firstUnit.shipType.name()}<br>
+              DDP Terms
+            </td>
+          #{/else}
       #{/else}
 
     <td>FROM:SHENZHEN</td>
