修改销量分析

--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -11,6 +11,7 @@
     <th>在途</th>
     <th>入库</th>
     <th>在库</th>
+    <th>Reserved</th>
     <th>Reviews</th>
     <th>Rating</th>
     <th>PS</th>
@@ -73,6 +74,7 @@
     <td class="text-info">${dto.way}</td>
     <td style="color:#CC6615">${dto.inbound}</td>
     <td class="text-success">${dto.qty}</td>
+    <td class="text-success">${dto.reserved}</td>
     <td>${dto.reviews}
       <small>${dto.reviewRatio.format('#')}</small>
     </td>
