修改销量分析排序

--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -10,8 +10,8 @@
     <th>已交货</th>
     <th>在途</th>
     <th>入库</th>
-    <th>在库</th>
     <th>Reserved</th>
+    <th>在库</th>
     <th>Reviews</th>
     <th>Rating</th>
     <th>PS</th>
@@ -73,8 +73,8 @@
     <td style="color:#FE502A;">${dto.worked}</td>
     <td class="text-info">${dto.way}</td>
     <td style="color:#CC6615">${dto.inbound}</td>
+    <td class="color:#CC6615">${dto.reserved}</td>
     <td class="text-success">${dto.qty}</td>
-    <td class="text-success">${dto.reserved}</td>
     <td>${dto.reviews}
       <small>${dto.reviewRatio.format('#')}</small>
     </td>
