--- a/core/app/views/Payments/show.html
+++ b/core/app/views/Payments/show.html
@@ -84,11 +84,11 @@
       <dt>支付人</dt>
       <dd>${payment.payer?.username}</dd>
       <dt>(计算)应该支付</dt>
-      <dd>${payment.actualCurrency.symbol()} ${payment.shouldPaid}</dd>
+      <dd>${payment.actualCurrency.symbol()} ${payment.shouldPaid.format('#,###.##')}</dd>
       <dt>&nbsp;</dt>
       <dd>&nbsp;</dd>
       <dt>实际支付金额</dt>
-      <dd>${payment.actualCurrency.symbol()} ${payment.actualPaid}</dd>
+      <dd>${payment.actualCurrency.symbol()} ${payment.actualPaid.format('#,###.##')}</dd>
       <dt>实际支付对方账号</dt>
       <dd>${payment.actualUser}</dd>
       <dt>实际支付对方账户</dt>
