修改财务数据显示

--- a/core/app/views/Shipments/_paymentunits.html
+++ b/core/app/views/Shipments/_paymentunits.html
@@ -251,6 +251,6 @@
 
 <script type="text/template" id="statisticFee-template">
   <tr>
-    <td colspan="14"><span style="margin-right:20px;">运输单费用统计</span> <%= msg.format('#,###.##') %></td>
+    <td colspan="14"><span style="margin-right:20px;">运输单费用统计</span> <%= msg %></td>
   </tr>
 </script>
