--- a/core/app/views/Applys/_relate_payments.html
+++ b/core/app/views/Applys/_relate_payments.html
@@ -23,7 +23,7 @@
         #{/list}
     </tr>
   #{/list}
-    <tr>
+    <tr #{if !showtotal}style="display: none;" #{/if}>
       <td></td>
       <td>总额</td>
       <td class="usd"></td>
