--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -361,7 +361,7 @@
 
 
 
-#{render './_relate_payments.html', payments: apply.payments/}
+#{render './_relate_payments.html', payments: apply.payments, showtotal:true/}
 
 #{records records: apply.records()/}
 
