--- a/core/app/views/Applys/transport.html
+++ b/core/app/views/Applys/transport.html
@@ -89,6 +89,6 @@
 
 #{render './_relate_fees.html', apply: apply/}
 
-#{render './_relate_payments.html', payments: apply.payments/}
+#{render './_relate_payments.html', payments: apply.payments, showtotal:false/}
 
 #{records records: apply.records()/}
