--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -179,7 +179,7 @@
           </td>
 
           <th>UPC(JP)</th>
-          <td><input type="text" name="pro.upcJP" value="${pro.upcJP}" required></td>
+          <td><input type="text" name="pro.upcJP" value="${pro.upcJP}"></td>
         </tr>
 
         <tr>
@@ -189,7 +189,7 @@
                    required="required">
           </td>
           <th>Part Number(JP)</th>
-          <td><input type="text" name="pro.partNumberJP" value="${pro.partNumberJP}" required></td>
+          <td><input type="text" name="pro.partNumberJP" value="${pro.partNumberJP}"></td>
         </tr>
 
         <tr>
