修改brandworl的联系经办人

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -234,7 +234,7 @@
           <input type="text" name="excel.buyerCompany" id="excel_buyerCompany" value="${models.OperatorConfig.getVal("buyercompany")}">
         </td>
         <th>经办人</th>
-        <td><input type="text" name="excel.buyer" id="excel_buyer"></td>
+        <td><input type="text" name="excel.buyer" id="excel_buyer" value="${models.OperatorConfig.getVal("buyerconcat")}"></td>
       </tr>
 
       <tr>
