--- a/core/app/views/ReportDownloads/applyReportsIndex.html
+++ b/core/app/views/ReportDownloads/applyReportsIndex.html
@@ -103,7 +103,7 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="bs-docs-form">
-      <form class="search_form" action="@{Excels.orderFeesSummaryReport()}" target="_blank">
+      <form class="search_form" action="@{Excels.orderFeesCostReport()}" target="_blank">
         <div class="inline" style="margin-top:4px;">
           <span class="label label-info">订单费用汇总报表:</span>
         </div>
