--- a/core/app/views/ProcureUnits/blank.html
+++ b/core/app/views/ProcureUnits/blank.html
@@ -25,6 +25,7 @@
 <input type="hidden" id="isNeedApply" name="isNeedApply" value="${isNeedApply}">
 <input type="hidden" id="totalFive" name="totalFive" value="${totalFive}">
 <input type="hidden" id="day" name="day" value="${day}">
+<input type="hidden" id="addressName" value="${models.OperatorConfig.getVal("addressname")}">
 
 #{/form}
 
