显示格式问题

--- a/core/app/views/Finances/skuProfitAnalyse.html
+++ b/core/app/views/Finances/skuProfitAnalyse.html
@@ -76,11 +76,11 @@
             <td>${pro.skuSaleCost.format('#.##')}</td>
             <td>${pro.purchaseCost.format('#.##')}</td>
             <td>${pro.shipCost.format('#.##')}</td>
-            <td>${pro.taxCost}</td>
-            <td>${pro.saleFee}</td>
-            <td>${pro.amazonfee}</td>
-            <td>${pro.fbafee}</td>
-            <td>${pro.totalprofit}</td>
+            <td>${pro.taxCost.format('#.##')}</td>
+            <td>${pro.saleFee.format('#.##')}</td>
+            <td>${pro.amazonfee.format('#.##')}</td>
+            <td>${pro.fbafee.format('#.##')}</td>
+            <td>${pro.totalprofit.format('#.##')}</td>
           </tr>
           #{/list}
       </tbody>
