修改送货地址

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -179,7 +179,7 @@
         <th>交货地址</th>
         <td colspan="7">
           <textarea rows="3" class="span12" name="excel.deliveryAddress" id="excel_deliveryAddress">
-            收货地址: 深圳市光明新区根玉路汉海达高新科技园1栋6楼A区
+            收货地址: 深圳市光明新区根玉路第七工业区汉海达高新科技园1栋6楼A区
 
             收货时间: 周一到周五 8:00—18:00 周六 08:00-17:00 (法定假日另行通知 如需周天送货，请提前一天邮件通知，并于司机出发前 30 分钟电话确认再发货！特殊进仓请提前一天书面知会，视情况收取加班作业费！)
 
@@ -192,6 +192,8 @@
             仓库文员 彭卫燕 手机：13714277760 QQ: 2100604843 邮箱：orga-cargo@foxmail.com
 
             其他联系人：伍先生手机号 15616621498
+            旷杰Jie18692275630 jie@easya.cc
+            夏艳红Vivian18098906612 vivian@easya.cc
           </textarea>
         </td>
       </tr>
