修改运输单

--- a/core/app/views/Shipments/_expresseurope.html
+++ b/core/app/views/Shipments/_expresseurope.html
@@ -18,7 +18,7 @@
   #{/elseif}
   #{elseif country == 'IT'}
     Sold to : ${models.OperatorConfig.getVal("shipmenteuropeitbuyer")}<br>
-    (ACIT S.R.L. is the legal reprensentative of Tuggle in France)<br>
+    (ACIT S.R.L. is the legal reprensentative of Tuggle in Italy)<br>
     Address: ${models.OperatorConfig.getVal("shipmentexpresseuropeitaddress")}<br>
     VAT No. : ${models.OperatorConfig.getVal("shipmenteuropeitvat")}<br>
   #{/elseif}
