--- a/core/app/views/Shipments/_expresseurope.html
+++ b/core/app/views/Shipments/_expresseurope.html
@@ -8,7 +8,7 @@
   #{elseif country == 'FR'}
     Sold to : ${models.OperatorConfig.getVal("shipmenteuropefrsold")}<br>
     (SERF Europefides SAS is the legal reprensentative of Tuggle in France)<br>
-    Address:${models.OperatorConfig.getVal("shipmenteuropefrsold")}<br>
+    Address:${models.OperatorConfig.getVal("shipmenteuropefraddress")}<br>
     VAT No. : ${models.OperatorConfig.getVal("shipmenteuropefrvat")}<br>
   #{/elseif}
   #{elseif country == 'GB'}
