--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -185,8 +185,9 @@
 
             仓库联系人:
 
-            旷杰Jie18692275630 jie@easya.cc
-            夏艳红Vivian18098906612 vivian@easya.cc
+            仓库座机: 0755-36931516
+            旷杰Jie 18692275630 jie@easya.cc
+            夏艳红Vivian 18098906612 vivian@easya.cc
           </textarea>
         </td>
       </tr>
