--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
 <div class="navbar-inner">
 <div class="container">
-<a class="brand" href="@{Application.index()}">Elcuk2</a>
+<a class="brand" href="@{Application.index()}">${models.OperatorConfig.getVal("brandname")}</a>
 
 <div class="nav-collapse">
 <ul class="nav">
