*  退货率展示

--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -114,6 +114,9 @@
       </select>
     </td>
     <td>${dto.main_ship_type}</td>
+    <td style="${dto.returnRates > 0.3 ? 'background-color:#FF0000' : ''}" rel="popover" data-content="${dto.returns}/${dto.sales}"
+        placement="top">${(dto.returnRates * 100).format('#.#%')}
+    </td>
   </tr>
   #{/list}
   </tbody>
