--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -135,6 +135,9 @@
       #{power.ck "deliveryments.index"}
         <li><a href="@{Deliveryments.index()}">采购单</a></li>
       #{/power.ck}
+      #{power.ck "deliverplans.index"}
+        <li><a href="@{Deliverplans.index()}">出货单</a></li>
+      #{/power.ck}
       #{power.ck "cooperators.index"}
         <li><a href="@{Cooperators.index()}">合作伙伴</a></li>
       #{/power.ck}
